iRedMail-0.9.6:
    * Supports new distribution release:
        + OpenBSD 6.0. OpenBSD 5.9 is not supported anymore.
        + FreeBSD 11.0.

    * Improvements:
        - Installer:
            + Able to choose not to install web server and web applications.

        - Nginx:
            - Add HSTS header for Roundcube, iRedAdmin, SOGo.
            - Add sample config files to run Roundcube, iRedAdmin, SOGo as a
              subdomain.

        - Roundcube webmail:
            - Enable plugin `enigma` by default for PGP encryption.
              WARNING: The plugin uses gpg binary on the server and stores all
              keys (including private keys of the users) on the server.
              Encryption/decryption is done server-side. So, this plugin
              is for users that trust the server.

              If you get error `Identity must have a user name defined` while
              first trying to generate gpg key, please add a name for your
              email account in Roundcube: `Settings -> Identities`.

        - SOGo:
            - List all contacts by default in SOGo global address book.

        - FreeBSD:
            - Switch from OpenSSL to LibreSSL by default.

    * Fixed issues:
        - Fix the HTTPROXY vulnerability in Apache and Nginx.
          Reference: https://httpoxy.org/
        - Not convert domain name and email address to lower cases while
          creating mail accounts with scripts tools/create_mail_user_*.
          Thanks Santosh Gupta <head.it _at_ satmatechnologies.com> for the
          report.

        - SOGo:
            - Not correctly redirect access to https in Apache.

        - Postfix:
            - Not enable opportunistic TLS support for remote smtp clients.
            - Incorrect HELO restriction rule which causes Postfix rejects smtp
              session with HELO "[IP_ADDRESS]" (with squared brackets).

        - Nginx:
            - Not forward real client IP address to SOGo.