@@ -1,2 +1,2 @@
 MD5 (misc/iRedAPD-beta.tar.bz2) = 4ddc8653c9b03d26d31ceec47d795b14
-MD5 (misc/iRedAdmin-0.6.3.tar.bz2) = 64a64ebc240f00ecd145c7877b9baa7f
+MD5 (misc/iRedAdmin-beta.tar.bz2) = 8fec2c2bc99786306b837b28711ea712
